--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
 		"get_next_line.h": "c",
 		"libftprintf.h": "c",
 		"mlx42_int.h": "c",
-		"mlx42.h": "c"
+		"mlx42.h": "c",
+		"struct.h": "c",
+		"stat.h": "c",
+		"gameplay.h": "c"
 	}
 }
